style.css: Fix password font size
After doing a hard reload, I found that the password font size was
waaaaay too big. Now, the secret word should fit with just a little
space to spare.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,7 +174,7 @@ body.filled .arrow-right {
 	left: 20%;
 	width: 60%;
 	height: 20%;
-	font-size: 80pt;
+	font-size: 45pt;
 	border-color: black;
 	border-width: 2px;
 	padding: 10px;
